<resources>

    <string name="app_name">Xsens DOT Example</string>

    <string name="tracker_name">Xsens DOT</string>

    <string name="hint_turn_on_bluetooth">Please turn on the Bluetooth adapter.</string>
    <string name="hint_allow_location">Please allow location permission to use sensor(s).</string>
    <string name="hint_connecting">Please wait for the connection result…</string>
    <string name="hint_syncing_failed">Put sensors as close as possible and try again.</string>
    <string name="hint_check_connection">Some sensors are disconnected. Please check the connection.</string>

    <string name="menu_start_scan">Scan</string>
    <string name="menu_stop_scan">Stop Scanning</string>
    <string name="menu_start_streaming">Start</string>
    <string name="menu_stop_streaming">Stop</string>
    <string name="menu_measure">Measure</string>

    <string name="disconnected">Disconnected</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="batt_state_charging">Charging</string>
    <string name="syncing">Syncing</string>
    <string name="mode">Mode:</string>
    <string name="sync_status">Sync status:</string>
    <string name="sync_result_success">Success</string>
    <string name="sync_result_fail">Fail</string>
    <string name="mode_complete_euler">Complete (Euler)</string>
    <string name="name">Name:</string>
    <string name="orientation">Orientation (deg):</string>
    <string name="free_acc">Free Acceleration (m/s2):</string>
    <string name="connection_indeed">Please connect to your sensor first</string>

    <string name="ota">OTA</string>
    <string name="device_name">Device Name:</string>
    <string name="device_address">Device Address:</string>
    <string name="firmware_version">Firmware Version:</string>
    <string name="check_update">Check Update</string>
    <string name="check_update_and_download">Check Update And Download</string>
    <string name="start_ota">Start OTA</string>
    <string name="update_state">Update Status:</string>
    <string name="empty_value">-</string>
    <string name="ota_progress">OTA progress</string>
    <string name="tip_dot_uncharged">DOT is uncharged</string>
    <string name="ota_result_success">Success</string>
    <string name="ota_result_fail">Fail</string>
    <string name="no_new_firmware_version">, no new firmware version.</string>
    <string name="new_firmware_version">, new version: %s</string>
    <string name="tip_ota_file_mismatch">File Mismatch</string>
    <string name="error_code">, error code %d</string>
    <string name="tip_start_ota">Please \'check update and download\' first.</string>

    <string name="mfm">MFM</string>
    <string name="mfm_tips">Rotate the sensors slowly in all directions</string>
    <string name="start_mfm">Start MFM</string>
    <string name="stop_mfm">Stop MFM</string>
    <string name="restart_mfm">Restart MFM</string>
    <string name="exit_mfm">Exit MFM</string>
    <string name="mfm_write">Write to sensor…</string>
    <string name="mfm_rewrite"><u>Rewrite</u></string>
    <string name="mfm_stopped">Stopped</string>
    <string name="mfm_processing">Processing</string>
    <string name="mfm_processing_hint">Please wait until all processes are done</string>
    <string name="mfm_start_fail">Start failed</string>
    <string name="mfm_process_fail">MFM failed</string>
    <string name="mfm_write_fail">Write failed</string>
    <string name="mfm_process_finish">Finished</string>
    <string name="more">More</string>

</resources>
