<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.xsens.dot.android.example.views.MainActivity">

    <item
        android:id="@+id/action_scan"
        android:orderInCategory="0"
        android:title="@string/menu_stop_scan"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_streaming"
        android:orderInCategory="1"
        android:title="@string/menu_start_streaming"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_recording"
        android:orderInCategory="1"
        android:title="@string/menu_recording"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_measure"
        android:orderInCategory="2"
        android:title="@string/menu_measure"
        app:showAsAction="never" />

</menu>