<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    tools:context=".views.MainActivity">

    <TextView
        android:id="@+id/device_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_name"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/device_name_label"
        app:layout_constraintStart_toEndOf="@+id/device_name_label" />

    <TextView
        android:id="@+id/device_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/device_address"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device_name_label" />

    <TextView
        android:id="@+id/device_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/device_address_label"
        app:layout_constraintStart_toEndOf="@+id/device_address_label" />

    <TextView
        android:id="@+id/firmware_version_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/firmware_version"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device_address_label" />

    <TextView
        android:id="@+id/firmware_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/firmware_version_label"
        app:layout_constraintStart_toEndOf="@+id/firmware_version_label" />

    <Button
        android:id="@+id/check_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/check_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firmware_version_label" />

    <Button
        android:id="@+id/check_update_and_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/check_update_and_download"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_update" />

    <Button
        android:id="@+id/start_ota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start_ota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_update_and_download" />

    <TextView
        android:id="@+id/update_state_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/update_state"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_ota" />

    <TextView
        android:id="@+id/update_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/empty_value"
        app:layout_constraintBottom_toBottomOf="@+id/update_state_label"
        app:layout_constraintStart_toEndOf="@+id/update_state_label" />

    <TextView
        android:id="@+id/ota_progress_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ota_progress"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_state_label" />

    <TextView
        android:id="@+id/ota_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/empty_value"
        app:layout_constraintBottom_toBottomOf="@+id/ota_progress_label"
        app:layout_constraintStart_toEndOf="@+id/ota_progress_label" />

</androidx.constraintlayout.widget.ConstraintLayout>