<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/name"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/tracker_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_alignParentStart="true"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="00:00:00:00:00:00"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="0%"
            android:textSize="16sp"
            android:visibility="gone"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="Write successfully"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            android:visibility="gone"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/done_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@+id/done"
            android:text="@string/mfm_process_finish"
            android:textColor="@android:color/holo_green_light"
            android:textSize="16sp"
            android:visibility="gone"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/done"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/holo_green_light"
            android:visibility="gone" />

        <TextView
            android:id="@+id/rewrite_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@+id/rewrite"
            android:text="@string/mfm_write_fail"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:visibility="gone"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/rewrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/mfm_rewrite"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/processing_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@+id/processing"
            android:text="@string/mfm_processing"
            android:textSize="16sp"
            android:visibility="gone"
            tools:ignore="HardcodedText" />

        <ProgressBar
            android:id="@+id/processing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:visibility="gone" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_below="@+id/container"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:secondaryProgress="100" />

</RelativeLayout>